--- a/index.html
+++ b/index.html
@@ -30,10 +30,10 @@
 
     <!-- Menu Section on the Right -->
     <div class="menu">
-        <button class="button-59" role="button">code</button>
-        <button class="button-59" role="button">photos</button>
-        <button class="button-59" role="button">music</button>
-        <button class="button-59" role="button">contact</button>
+        <button class="button-59" role="button" onclick="location.href='code.html'">code</button>
+        <button class="button-59" role="button" onclick="location.href='photos.html'">photos</button>
+        <button class="button-59" role="button" onclick="location.href='music.html'">music</button>
+        <button class="button-59" role="button" onclick="location.href='contact.html'">contact</button>
     </div>
 </div>
 <!-- partial -->
